--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!doctype html>
 <html>
   <head>
+	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+	<meta content="utf-8" http-equiv="encoding">
+
     <title>Getting Started With Webpack</title>
+	<style>
+		body{background-color:gray;}
+		canvas
+		{
+
+		}
+		
+	</style>
   </head>
   <body>
 	<h2>IMAGE BELOW THIS </h2>
-	<img id="fire-fx" src ="./flamefx.png">
+	<img id="fire-fx" src ="./showcase/leaf.png">
 	
+	<script src="./showcase/stats.min.js"></script>
+	<script src="./showcase/dat.gui.min.js"></script>
     <script src="./dist/min.js"></script>
-    <script src="./custom.js"></script>
+    <script src="./showcase/custom.js"></script>
+	
   </body>
 </html>
