change to smoke room description

--- a/showcase/smoke/smoke.html
+++ b/showcase/smoke/smoke.html
@@ -134,7 +134,7 @@
 	
 	<div class="parameters">
 		<p>
-			In this example we generate particles all over the screen with 0 initial velocity combined with mouse interactivity we create an effect that compels the user to interact.<br>
+			In this example we generate particles all over the screen with 0 initial velocity combined with the usage of the mouse we create an effect that compels the user to interact.<br>
 			
 		</p>
 	
