--- a/showcase/balloons/balloons.html
+++ b/showcase/balloons/balloons.html
@@ -129,8 +129,7 @@
 	
 	<div class="parameters">
 		<p>
-			In this example we activate prerender mode, by default it creates 16 objects of random colors in an efficient way, you can also control the color in real time but this operation is much more expensive.
-			you can also choose which colors to use for colouring your image.
+			In this example we activate prerender mode, in this mode the library creates copies of your image with random colors 16 copies are created by default, controlling the color in real time is possible but much more expensive in prerender mode we can render hunddreds of particles, in realtime mode having 100 on screen will already drop the FPS.
 		</p>
 	
 	</div>
