--- a/showcase/birdFlock/birds-flock.html
+++ b/showcase/birdFlock/birds-flock.html
@@ -134,7 +134,7 @@
 	
 	<div class="parameters">
 		<p>
-			This example uses a spritesheet to create animations, when working with spritehsheets you gotta configure the number of colums and rows as well as how much time we'll linger in each frame
+			This example uses a spritesheet to create animations, when working with spritesheets you the number of colums and rows has to be configured, as well as the maximun number of frames our animatino has, also how much time we'll linger in each frame
 		</p>
 	
 	</div>
