--- a/showcase/coins/coins.html
+++ b/showcase/coins/coins.html
@@ -135,7 +135,7 @@
 	
 	<div class="parameters">
 		<p>
-			In this example we showcase the use of another kind of emitter a VectorArcRange, which emits particles in an arc range as it's name suggests, there are varios kind of Vector, Scalar and Color generators to create various random effects
+			In this example we showcase the use of another kind of emitter a VectorArcRange, which emits particles in an arc range as its name suggests, there are various kinds of Vector, Scalar and Color generators that allow you to create different effects
 		</p>
 	
 	</div>
